--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/recars/server#readme",
     "dependencies": {
+        "axios": "^0.18.0",
         "bcrypt": "^3.0.5",
         "body-parser": "^1.18.3",
         "consign": "^0.1.6",
