--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js",
-        "test": "npm run lint",
+        "dev": "nodemon server.js --ignore __tests__",
+        "test": "jest --detectOpenHandles",
         "debug": "nodemon --inspect server.js",
         "lint": "eslint . --ext .js"
     },
@@ -31,7 +31,6 @@
         "express": "^4.16.4",
         "jwt-simple": "^0.5.6",
         "mongoose": "^5.4.19",
-        "morgan": "^1.9.1",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0"
     },
@@ -45,6 +44,12 @@
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
         "eslint-plugin-promise": "^4.0.1",
-        "eslint-plugin-standard": "^4.0.0"
+        "eslint-plugin-standard": "^4.0.0",
+        "factory-girl": "^5.0.4",
+        "faker": "^4.1.0",
+        "jest": "^24.7.1",
+        "mongodb-memory-server": "^5.1.0",
+        "morgan": "^1.9.1",
+        "supertest": "^4.0.2"
     }
 }
