--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js --ignore __tests__",
-        "test": "jest --detectOpenHandles",
+        "test": "npm run lint && jest --detectOpenHandles",
         "debug": "nodemon --inspect server.js",
         "lint": "eslint . --ext .js"
     },
